# music_box

./: .gitignore  Cargo.toml  README.md  dev.sh  setup_env.sh
desktop/: Cargo.toml
desktop/src/: main.rs
music_box/: Cargo.toml
music_box/src/: lib.rs  main.rs  model.rs  spotify.rs
src/: lib.rs  main.rs  spotify.rs
ui/: Cargo.toml  bootstrap.js  package-lock.json  package.json  webpack.config.js
ui/src/: lib.rs
ui/static/: index.html  style.scss
webserver/: Cargo.toml  build.rs
webserver/assets/: .babelrc  index.html  index.js  package-lock.json  package.json
webserver/assets/styles/: style.scss
webserver/src/: main.rs
