[package]
name = "music_box"
version = "0.1.0"
authors = ["Lakret <Rakuretu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.13.0"
serde = "^1.0"
bincode = "^1.3"
rspotify = {version = "^0.10", features=["blocking"]}
