[package]
name = "desktop"
version = "0.1.0"
authors = ["Lakret <Rakuretu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
music_box = { path = "../music_box" }
web-view = { version = "0.6.3" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
