[package]
name = "music_box"
version = "0.1.0"
authors = ["Lakret <Rakuretu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.13.0"
serde = "^1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "^1.3"
rspotify = {git = "https://github.com/ramsayleung/rspotify", features=["client-ureq", "ureq-rustls-tls"], default-features = false}
rodio = "^0.12"

[lib]
name = "music_box"
path = "src/lib.rs"

[[bin]]
name = "music_box"
path = "src/main.rs"
