[package]
name = "webserver"
version = "0.1.0"
authors = ["Lakret <Rakuretu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
music_box = {path = "../music_box"}
actix-web = "3"
actix-files = "^ 0.4"
log = "*"
env_logger = "^ 0.8"
listenfd = "0.3"
